--- a/HeroesONELib/HeroesONELib.csproj
+++ b/HeroesONELib/HeroesONELib.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FraGag.Compression.Prs">
+      <HintPath>..\Dependencies\FraGag.Compression.Prs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
